tests/ui/parser/issues/issue-35813-postfix-after-cast.stderr
error: cast cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:10:5
   |
LL |     vec![1, 2, 3] as Vec<i32>[0];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (vec![1, 2, 3] as Vec<i32>)[0];
   |     +                         +

error: comparison operators cannot be chained
  --> $DIR/issue-35813-postfix-after-cast.rs:12:36
   |
LL |     type_ascribe(vec![1, 2, 3], Vec<i32>[0]);
   |                                    ^   ^
   |
   = help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   = help: or use `(...)` if you meant to specify fn arguments

error: cast cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:17:5
   |
LL |     (&[0]) as &[i32][0];
   |     ^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     ((&[0]) as &[i32])[0];
   |     +                +

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `:`
  --> $DIR/issue-35813-postfix-after-cast.rs:19:27
   |
LL |     type_ascribe((&[0i32]): &[i32; 1][0]);
   |                           ^ expected one of `)`, `,`, `.`, `?`, or an operator

error: aborting due to 4 previous errors

